# Sickle-Cell-Disease-Detection

./: README.md
Actual project/: fy-project.ipynb
Extension 2/: .gitignore  Proposed_System_Chapter.tex  Proposed_System_Report.docx  Proposed_System_Report.md  README.md  attach_images_to_synthetic_csv.py  data_generators.py  generate_docx_from_report.py  generate_latex_from_report.py  generate_synthetic_scd_tabular.py  option_a_predict_with_notes.py  option_b_multimodal_risk.py  project_paths.py  pyproject.toml  requirements.txt  tf_grad_cam.py  tf_lime.py  tf_shap.py  traditional_ml.py  train_cnn.py  transfer_learning.py
Extension 2/docs/: project_structure.md
Extension 2/scripts/: predict_image.py  run_explainability.py  run_traditional_ml.py  train_option1.py
Extension 2/src/sickle_project/: __init__.py  legacy.py  project.py
