[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sickle-project"
version = "0.1.0"
description = "Sickle cell morphology detection using deep learning and explainable AI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "scikit-learn",
  "tensorflow",
  "opencv-python",
  "shap",
  "lime",
  "pillow",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

